--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "lru-cache": "^4.0.2"
   },
   "devDependencies": {
-    "babel-watch": "^2.0.6"
+    "nodemon": "^1.11.0"
   },
   "scripts": {
-    "dev": "babel-watch ./src/server.js",
+    "dev": "nodemon ./src/server.js --exec babel-node",
     "start": "babel-node ./src/server.js"
   }
 }
