--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "main": "server.js",
   "license": "MIT",
   "dependencies": {
+    "apollo-engine": "^1.1.0",
     "app-module-path": "^2.2.0",
-    "axios": "^0.16.0",
+    "axios": "^0.18.0",
     "babel-cli": "^6.24.0",
     "babel-preset-env": "^1.3.2",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
+    "compression": "^1.7.2",
     "dataloader": "^1.3.0",
     "express": "^4.15.2",
-    "graphql": "^0.9.2",
-    "graphql-server-express": "^0.6.0",
-    "graphql-tools": "^0.11.0",
+    "graphql": "^0.13.2",
+    "graphql-server-express": "^1.3.4",
+    "graphql-tools": "^2.24.0",
     "lodash": "^4.17.4",
     "lru-cache": "^4.0.2"
   },
