--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
     "compression": "^1.7.2",
+    "cors": "^2.8.4",
     "dataloader": "^1.3.0",
     "express": "^4.15.2",
     "graphql": "^0.13.2",
