--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "app-module-path": "^2.2.0",
     "axios": "^0.18.0",
     "babel-cli": "^6.24.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.3.2",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
