--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-preset-env": "^1.3.2",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
+    "bottleneck": "^2.3.0",
     "compression": "^1.7.2",
     "cors": "^2.8.4",
     "dataloader": "^1.3.0",
@@ -20,7 +21,8 @@
     "graphql-server-express": "^1.3.4",
     "graphql-tools": "^2.24.0",
     "lodash": "^4.17.4",
-    "lru-cache": "^4.0.2"
+    "lru-cache": "^4.0.2",
+    "require-all": "^2.2.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.3",
